@@ -43,9 +43,16 @@ Minor changes:
    warning to the owner of the object executing them. Deprecated
    functions and commands might be removed in future patch levels;
    code using them needs to be rewritten. [SW]
+ * Rewrite function restriction parsing and reporting to make it easier to
+   add new restrictions. [SW]
+ * Code cleanup. [SW]
+
+Functions:
  * Mortals can now use lwho(me). Allows for lwho(%#) on ancestors to be
    used by all. Suggested by Minion. [MG]
  * xwho() now takes an optional <looker> arg, like lwho(). [MG]
+ * rand() without an argument returns a floating point number greater than
+   or equal to 0 and less than 1. [SW]
 
 Locks:
  * New locks, @lock/filter and @lock/infilter, which must be passed (along
@@ -67,6 +74,9 @@ Fixes:
  * The Can_spoof power was only aliased to Can_nspemit (its original name)
    in upgraded dbs, not in new games created from minimal db. Reported by
    Ben Ramsey. [MG]
+ * Fix a crash bug in @function/restrict on malformed input. Reported by
+   Padraic. [SW]
+ * Some fixes to the test suite. Reported by Covenent. [MG]
 
 & 1.8.4p6
 Version 1.8.4 patchlevel 6                                 Jul 29,  2011
